# kdm-sdk

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  DISTRIBUTION_PLAN.md  Dockerfile  Makefile  README.en.md  README.md  SECURITY.md  docker-compose.yml  facility_names_reference.md  pyproject.toml  setup.py  test_facility_names.py  test_max_period.py  test_period_limits.py  test_time_periods.py  test_water_quality_periods.py  verify_water_quality.py
.github/workflows/: ci.yml
docs/: ANALYST_QUICKSTART.md  API_OVERVIEW.md  DATA_GUIDE.md  GETTING_STARTED.md  ML_DATA_PREPARATION.md  QUERY_API.md  TEMPLATES_API.md
examples/: README.md
scripts/: README.md  git_push.sh  run_tests.sh  setup_git_auth.sh  verify_env.sh
src/kdm_sdk/: __init__.py  client.py
tests/: test_client.py  test_integration.py  test_performance.py
